# Youtube-Downloader

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  railway.toml  setup.bat  setup.sh
backend/: main.py  requirements.txt  test_api.py
frontend/: index.html  manifest.json  style.css  sw.js
