[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-downloader"
version = "1.0.0"
description = "YouTube Downloader PWA"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.120.4",
    "uvicorn==0.38.0",
    "yt-dlp==2025.10.22",
    "python-multipart==0.0.20",
    "python-dotenv==1.0.0",
]
